--- a/package.json
+++ b/package.json
@@ -1,24 +1,42 @@
 {
-  "name": "vite-react-boilerplate",
+  "name": "proto_sms_ext",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "cross-env vite build --watch --mode development",
     "build": "tsc && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
+    "@graywolfai/react-heroicons": "^1.2.3",
+    "@headlessui/react": "1.2.0",
+    "axios": "^0.21.1",
+    "clsx": "^1.1.1",
+    "easy-peasy": "^5.0.3",
+    "pubsub-js": "^1.9.3",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-hook-form": "^7.3.4",
+    "react-query": "^3.19.0",
+    "react-router-dom": "^5.2.0",
+    "reconnecting-websocket": "^4.4.0",
+    "uuid": "^8.3.2",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.3.2",
+    "@types/pubsub-js": "^1.8.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
+    "@types/ws": "^7.4.2",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.13",
-    "tailwindcss": "^2.1.2",
+    "autoprefixer": "^10.3.1",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.3.5",
+    "rollup-plugin-copy": "^3.4.0",
+    "tailwindcss": "^2.2.4",
     "typescript": "^4.1.2",
-    "vite": "^2.2.3"
+    "vite": "^2.4.2"
   }
 }
